--- a/app/build.gradle
+++ b/app/build.gradle
@@ -108,7 +108,14 @@ android {
     packagingOptions {
         jniLibs.useLegacyPackaging = true
         resources {
-            excludes += ['META-INF/INDEX.LIST', 'META-INF/*.md', 'META-INF/io.netty.versions.properties']
+            excludes += [
+                    'META-INF/INDEX.LIST',
+                    'META-INF/*.md',
+                    'META-INF/io.netty.versions.properties',
+                    'META-INF/DEPENDENCIES',
+                    'META-INF/spring.*',
+                    'META-INF/cxf/*',
+            ]
         }
     }
 
@@ -141,7 +148,7 @@ dependencies {
     implementation 'androidx.compose.material:material:1.4.1'
     implementation 'androidx.paging:paging-compose:1.0.0-alpha18'
     implementation 'androidx.webkit:webkit:1.9.0'
-    androidTestImplementation 'junit:junit:4.12'
+    androidTestImplementation 'junit:junit:4.13.2'
     ext.kotlin_version = "1.8.10"
     implementation("org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version")
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4")
@@ -224,6 +231,11 @@ dependencies {
     implementation 'androidx.camera:camera-camera2:1.3.0-rc02'
     implementation 'androidx.camera:camera-lifecycle:1.3.0-rc02'
     implementation 'androidx.camera:camera-view:1.3.0-rc02'
+    implementation ('org.apache.tika:tika-parsers:1.10') {
+        exclude group: 'commons-logging', module: 'commons-logging' //, version: '1.2'
+        exclude group: 'commons-logging', module: 'commons-logging-api' //, version: '1.2'
+        exclude group: 'org.apache.xmlbeans', module: 'xmlbeans' //, version: '2.6.0'
+    }
 
 
     androidTestUtil 'androidx.test:orchestrator:1.4.0'
@@ -240,6 +252,8 @@ dependencies {
     androidTestImplementation 'androidx.test:rules:1.5.0'
     androidTestImplementation 'io.cucumber:cucumber-android:4.10.0'
     androidTestImplementation 'io.cucumber:cucumber-picocontainer:4.8.1'
+
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:3.0-alpha-1'
 
 }
 
