--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,8 +91,12 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion.VERSION_17
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    kotlinOptions {
+        jvmTarget = '1.8'
     }
 
     // To let the libs be included in other projects
@@ -102,9 +106,7 @@ android {
         }
     }
 
-    kotlinOptions {
-        jvmTarget = '17'
-    }
+
     packagingOptions {
         jniLibs.useLegacyPackaging = true
         resources {
@@ -130,7 +132,7 @@ android {
     }
 
     composeOptions {
-        kotlinCompilerExtensionVersion = "1.4.3"
+        kotlinCompilerExtensionVersion = "1.5.8"
     }
 }
 
@@ -145,46 +147,47 @@ tasks.withType(JavaCompile) {
 
 dependencies {
     // Android Kotlin Project
-    implementation 'androidx.compose.material:material:1.4.1'
-    implementation 'androidx.paging:paging-compose:1.0.0-alpha18'
-    implementation 'androidx.webkit:webkit:1.9.0'
-    androidTestImplementation 'junit:junit:4.13.2'
-    ext.kotlin_version = "1.8.10"
+    implementation 'androidx.compose.material:material:1.6.3'
+    implementation 'androidx.paging:paging-compose:3.2.1'
+    implementation 'androidx.webkit:webkit:1.10.0'
+    implementation 'androidx.navigation:navigation-compose:2.7.7'
+    androidTestImplementation 'junit:junit:4.12'
+    ext.kotlin_version = "1.9.22" //1.9.23
     implementation("org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version")
-    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4")
-    implementation "androidx.core:core-ktx:1.9.0"
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.1")
+    implementation "androidx.core:core-ktx:1.12.0"
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.compose:compose-bom:2023.10.00'
-    androidTestImplementation 'androidx.compose:compose-bom:2023.10.00'
+    implementation platform('androidx.compose:compose-bom:2024.02.02')
+    androidTestImplementation platform('androidx.compose:compose-bom:2024.02.02')
     // Android Room
-    ext.room_version = '2.5.1'
+    ext.room_version = '2.6.1'
     implementation("androidx.room:room-runtime:$room_version")
     annotationProcessor("androidx.room:room-compiler:$room_version")
     kapt("androidx.room:room-compiler:$room_version")
     implementation("androidx.room:room-ktx:$room_version")
     implementation("androidx.room:room-paging:$room_version")
     // material 3 and adaptive accompanist
-    implementation "androidx.compose.material3:material3:1.1.2"
+    implementation "androidx.compose.material3:material3:1.2.1"
     implementation('com.google.accompanist:accompanist-insets:0.30.1')
-    implementation('com.google.accompanist:accompanist-adaptive:0.30.1')
-    implementation "com.google.accompanist:accompanist-permissions:0.30.1"
+    implementation('com.google.accompanist:accompanist-adaptive:0.32.0')
+    implementation "com.google.accompanist:accompanist-permissions:0.32.0"
     implementation "androidx.compose.material:material-icons-extended"
-    implementation "androidx.compose.material3:material3-window-size-class:1.1.2"
+    implementation "androidx.compose.material3:material3-window-size-class:1.2.1"
     // Android Studio Preview support
     implementation 'androidx.compose.ui:ui-tooling-preview'
     debugImplementation 'androidx.compose.ui:ui-tooling'
     implementation 'androidx.activity:activity-compose'
     //Koin
-    ext.koin_version = '3.4.0'
+    ext.koin_version = '3.5.0'
     implementation "io.insert-koin:koin-android:$koin_version"
     implementation "io.insert-koin:koin-androidx-compose:$koin_version"
     // live data + view model
     implementation "androidx.compose.runtime:runtime-livedata"
-    kapt 'androidx.lifecycle:lifecycle-compiler:2.6.2'
+    kapt 'androidx.lifecycle:lifecycle-compiler:2.7.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.2'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.2'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.2'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.7.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.7.0'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.7.0'
     // crypto
     implementation("org.bouncycastle:bcprov-jdk15on:1.70")
     implementation('org.bouncycastle:bcpkix-jdk15on:1.70')
@@ -197,24 +200,24 @@ dependencies {
     implementation("org.syncope.identityconnectors:framework:0.4.3")
     compileOnly('io.vertx:vertx-core:4.4.1')
     implementation('org.slf4j:slf4j-api:2.0.7')
-    implementation("com.fasterxml.jackson.core:jackson-databind:2.13.4.2")
-    implementation("com.fasterxml.jackson.module:jackson-module-kotlin:2.7.1-2")
-    implementation 'commons-codec:commons-codec:1.15'
+    implementation("com.fasterxml.jackson.core:jackson-databind:2.16.1")
+    implementation("com.fasterxml.jackson.module:jackson-module-kotlin:2.16.1")
+    implementation 'commons-codec:commons-codec:1.16.0'
     implementation("com.google.guava:guava:31.1-jre")
     implementation('io.vertx:vertx-lang-kotlin-coroutines:4.4.1')
     implementation('org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.0')
     // link preview
     implementation 'com.linkedin.urls:url-detector:0.1.17'
-    implementation 'org.jsoup:jsoup:1.16.1'
+    implementation 'org.jsoup:jsoup:1.17.2'
     implementation("org.jetbrains.kotlinx:kotlinx-collections-immutable:0.3.6")
     implementation 'io.coil-kt:coil-compose:2.5.0'
     implementation 'io.coil-kt:coil-video:2.5.0'
-    implementation "net.engawapg.lib:zoomable:1.5.2"
-    implementation "androidx.media3:media3-exoplayer:1.2.0-rc01"
-    implementation "androidx.media3:media3-ui:1.2.0-rc01"
-    implementation "androidx.media3:media3-session:1.2.0-rc01"
-    implementation "androidx.media3:media3-datasource-okhttp:1.2.0-rc01"
-    implementation "androidx.media3:media3-exoplayer-hls:1.2.0-rc01"
+    implementation "net.engawapg.lib:zoomable:1.5.3"
+    implementation "androidx.media3:media3-exoplayer:1.3.0"
+    implementation "androidx.media3:media3-ui:1.3.0"
+    implementation "androidx.media3:media3-session:1.3.0"
+    implementation "androidx.media3:media3-datasource-okhttp:1.3.0"
+    implementation "androidx.media3:media3-exoplayer-hls:1.3.0"
     implementation 'com.github.lincollincol:compose-audiowaveform:1.1.1'
     // Rendering clickable text
     implementation 'com.google.accompanist:accompanist-flowlayout:0.30.0'
@@ -223,14 +226,14 @@ dependencies {
 
     implementation "androidx.datastore:datastore-preferences:1.0.0"
 
-    implementation 'androidx.emoji2:emoji2-emojipicker:1.4.0-beta05'
+    implementation 'androidx.emoji2:emoji2-emojipicker:1.4.0'
     // qr code printing
-    implementation "com.google.zxing:core:3.5.1"
+    implementation "com.google.zxing:core:3.5.2"
     implementation 'com.halilibo.compose-richtext:printing:0.16.0'
-    implementation 'androidx.camera:camera-core:1.3.0-rc02'
-    implementation 'androidx.camera:camera-camera2:1.3.0-rc02'
-    implementation 'androidx.camera:camera-lifecycle:1.3.0-rc02'
-    implementation 'androidx.camera:camera-view:1.3.0-rc02'
+    implementation 'androidx.camera:camera-core:1.3.2'
+    implementation 'androidx.camera:camera-camera2:1.3.2'
+    implementation 'androidx.camera:camera-lifecycle:1.3.2'
+    implementation 'androidx.camera:camera-view:1.3.2'
     implementation ('org.apache.tika:tika-parsers:1.10') {
         exclude group: 'commons-logging', module: 'commons-logging' //, version: '1.2'
         exclude group: 'commons-logging', module: 'commons-logging-api' //, version: '1.2'
@@ -238,8 +241,8 @@ dependencies {
     }
 
 
-    androidTestUtil 'androidx.test:orchestrator:1.4.0'
-    androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.4.1'
+    androidTestUtil 'androidx.test:orchestrator:1.4.2'
+    androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.6.3'
     // junit5 for org.apache
     androidTestImplementation("org.junit.jupiter:junit-jupiter-api:5.9.2")
     androidTestImplementation("de.mannodermaus.junit5:android-test-core:1.3.0")
